--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -13,14 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
-
-
+    <link rel="stylesheet" href="css/codeup-design-bootstrap.css">
 </head>
 <body style="background-color: #E6E6E6">
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg " style="font-family: 'Abel', sans-serif;">
+<div class="container-fluid ">
+    <nav class="navbar navbar-expand-lg mb-5" style="font-family: 'Abel', sans-serif;">
         <div class="container-fluid">
-
             <img class="me-2" src="img/logo.png" height="60" width="60"/>
             <a class="navbar-brand   d-md-none d-lg-block " href="#">codeup design</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,33 +39,65 @@
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">CONTACT</a>
                     </li>
-
                 </ul>
-
             </div>
         </div>
     </nav>
-    <header class="container" style="font-family: 'Anton', sans-serif; ">
-
-        <div class="row">
-            <div class="col-xs-12"> VISUAL DESIGN &</div>
-            <div class="col-xs-12">WEB</div>
-            <div class="col-xs-12">DEVELOPMENT</div>
-            <div class="col-xs-12">FROM PARK CITY, UTAH</div>
-
-            <div class="border border-5 border-white rounded-circle p-1 col text-center" style="background-color: #E6563B; width:100px;height:100px">DESIGN</div>
-            <div class="border border-5 border-white rounded-circle text-center" style="background-color: #EB9D3A">DEVELOP</div>
-            <div class="border border-5 border-white rounded-circle text-center" style="background-color: #7CB06C">SUPPORT</div>
-            <div class="border border-5 border-white rounded-circle text-center" style="background-color: #00ABA9">HOST</div>
-
-
+    <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-12 header-menu mb-5 d-flex text-center"> VISUAL DESIGN & WEB DEVELOPMENT</div>
+            <div class="col-sm-12 sub-heading mb-5">FROM PARK CITY, UTAH</div>
         </div>
-
+        <div class="container mt-5">
+            <div class="row d-flex flex-row justify-content-center">
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #EB9D3A">DEVELOP</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #E6563B;">DESIGN</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #7CB06C">SUPPORT</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #00ABA9">HOST</div>
+            </div>
+        </div>
     </header>
-
+    <main class="container">
+        <div class="row">
+            <div class="">
+                <img class="img-fluid" src="img/coding-on-screen.jpg" alt="">
+            </div>
+            <div class="">
+                <div class="">featured project</div>
+                <div class="d-flex flex-row justify-content-center">
+                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A"></span>
+                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;"></span>
+                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C"></span>
+                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9"></span>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+<div class="">
+    <img class="img-fluid" src="img/computer-coffee-cub.jpg" alt="">
+</div>
+<div class="row">
+
+</div>
+<div class="">
+    <img class="img-fluid" src="img/metrics-binary.jpg" alt="">
+</div>
+<div class="row">
+
+</div>
+<div class="">
+    <img class="img-fluid" src="img/person-laptob.jpg" alt="">
+</div>
+<div class="row">
+
+</div>
