--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -46,7 +46,7 @@
     <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-12 header-menu mb-5 d-flex text-center"> VISUAL DESIGN & WEB DEVELOPMENT</div>
-            <div class="col-sm-12 sub-heading mb-5">FROM PARK CITY, UTAH</div>
+            <div class="col-sm-12 sub-heading mb-5 text-center">FROM PARK CITY, UTAH</div>
         </div>
         <div class="container mt-5">
             <div class="row d-flex flex-row justify-content-center">
@@ -57,23 +57,77 @@
             </div>
         </div>
     </header>
-    <main class="container">
+
+    <div class="container">
+        <hr>
+    </div>
+
+    <main class="container border">
+        <!--parent container -->
         <div class="row">
-            <div class="">
-                <img class="img-fluid" src="img/coding-on-screen.jpg" alt="">
-            </div>
-            <div class="">
-                <div class="">featured project</div>
-                <div class="d-flex flex-row justify-content-center">
-                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A"></span>
-                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;"></span>
-                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C"></span>
-                    <span class="featured-project rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9"></span>
+
+            <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/coding-on-screen.jpg" alt="">
+                </div>
+                <div class="row d-flex flex-row justify-content-between container">
+                    <div class="col-5 caption">featured project</div>
+                    <div class="col-7 d-flex flex-row justify-content-center">
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                    </div>
                 </div>
             </div>
+
+            <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/computer-coffee-cub.jpg" alt="">
+                </div>
+                <div class="row d-flex flex-row justify-content-between">
+                    <div class="col-5 caption">featured project</div>
+                    <div class="col-7 d-flex flex-row justify-content-center">
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/metrics-binary.jpg" alt="">
+                </div>
+                <div class="row d-flex flex-row justify-content-between">
+                    <div class="col-5 caption">featured project</div>
+                    <div class="col-7 d-flex flex-row justify-content-center">
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-6">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/person-laptob.jpg" alt="">
+                </div>
+                <div class="row d-flex flex-row justify-content-between">
+                    <div class="col-5 caption">featured project</div>
+                    <div class="col-7 d-flex flex-row justify-content-center">
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
-    
 </div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
@@ -83,21 +137,3 @@
 
 
 
-<div class="">
-    <img class="img-fluid" src="img/computer-coffee-cub.jpg" alt="">
-</div>
-<div class="row">
-
-</div>
-<div class="">
-    <img class="img-fluid" src="img/metrics-binary.jpg" alt="">
-</div>
-<div class="row">
-
-</div>
-<div class="">
-    <img class="img-fluid" src="img/person-laptob.jpg" alt="">
-</div>
-<div class="row">
-
-</div>
