codeup design still under construction

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -66,62 +66,62 @@
         <!--parent container -->
         <div class="row">
 
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/coding-on-screen.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between container">
-                    <div class="col-5 caption">featured project</div>
-                    <div class="col-7 d-flex flex-row justify-content-center">
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                <div class="row d-flex flex-row justify-content-between align-items-center py-2">
+                    <div class="col-6 caption">featured project</div>
+                    <div class="col-6 d-flex flex-row justify-content-end ">
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/computer-coffee-cub.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between">
-                    <div class="col-5 caption">featured project</div>
-                    <div class="col-7 d-flex flex-row justify-content-center">
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                <div class="row d-flex flex-row justify-content-between align-items-center py-2">
+                    <div class="col-6 caption">featured project</div>
+                    <div class="col-6 d-flex flex-row justify-content-end">
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/metrics-binary.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between">
-                    <div class="col-5 caption">featured project</div>
-                    <div class="col-7 d-flex flex-row justify-content-center">
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                <div class="row d-flex flex-row justify-content-end align-items-center py-2">
+                    <div class="col-6 caption">featured project</div>
+                    <div class="col-6 d-flex flex-row justify-content-end">
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/person-laptob.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between">
-                    <div class="col-5 caption">featured project</div>
-                    <div class="col-7 d-flex flex-row justify-content-center">
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center"  style="background-color: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center d-flex align-items-center justify-content-center" style="background-color: #00ABA9">H</span>
+                <div class="row d-flex flex-row justify-content-end align-items-center py-2">
+                    <div class="col-6 caption">featured project</div>
+                    <div class="col-6 d-flex flex-row justify-content-end">
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
                     </div>
                 </div>
             </div>
