codeup design under construction

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -58,35 +58,36 @@
         </div>
     </header>
 
-    <div class="container">
+    <section class="container">
         <hr>
-    </div>
+    </section>
 
     <main class="container border">
+        <h5 class="my-5 text-uppercase text-center text-muted">Selected Work</h5>
         <!--parent container -->
-        <div class="row">
+        <section class="row">
 
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-md-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/coding-on-screen.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between align-items-center py-2">
-                    <div class="col-6 caption">featured project</div>
+                <div class="row d-flex flex-row align-items-center py-2">
+                    <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end ">
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #EB9D3A">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase"  style="background: #E6563B;">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #7CB06C">s</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #00ABA9">h</span>
                     </div>
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-md-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/computer-coffee-cub.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-between align-items-center py-2">
-                    <div class="col-6 caption">featured project</div>
+                <div class="row d-flex flex-row  align-items-center py-2">
+                    <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
                         <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
                         <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
@@ -96,12 +97,12 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-md-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/metrics-binary.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-end align-items-center py-2">
-                    <div class="col-6 caption">featured project</div>
+                <div class="row d-flex flex-row align-items-center py-2">
+                    <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
                         <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
                         <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
@@ -111,12 +112,12 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-md-6">
                 <div class="col-12">
                     <img class="img-fluid" src="img/person-laptob.jpg" alt="">
                 </div>
-                <div class="row d-flex flex-row justify-content-end align-items-center py-2">
-                    <div class="col-6 caption">featured project</div>
+                <div class="row d-flex flex-row align-items-center py-2">
+                    <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
                         <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
                         <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
@@ -126,7 +127,7 @@
                 </div>
             </div>
 
-        </div>
+        </section>
     </main>
 </div>
 <!-- JavaScript Bundle with Popper -->
