side bar added to codeup design

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -27,17 +27,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled " aria-current="page" href="#">SERVICES</a>
+                        <a class="nav-link disabled text-uppercase" aria-current="page" href="#">services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">WORK</a>
+                        <a class="nav-link disabled text-uppercase" href="#">work</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link disabled">BLOG</a>
+                        <a class="nav-link disabled text-uppercase">blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">CONTACT</a>
+                        <a class="nav-link disabled text-uppercase" href="#">contact</a>
                     </li>
                 </ul>
             </div>
@@ -45,15 +45,15 @@
     </nav>
     <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 header-menu mb-5 d-flex text-center"> VISUAL DESIGN & WEB DEVELOPMENT</div>
-            <div class="col-sm-12 sub-heading mb-5 text-center">FROM PARK CITY, UTAH</div>
+            <div class="col-sm-12 header-menu mb-5 d-flex text-center text-uppercase">visual design & web development</div>
+            <div class="col-sm-12 sub-heading mb-5 text-center text-uppercase">from park city, utah</div>
         </div>
         <div class="container mt-5">
             <div class="row d-flex flex-row justify-content-center">
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #EB9D3A">DEVELOP</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #E6563B;">DESIGN</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #7CB06C">SUPPORT</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background-color: #00ABA9">HOST</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #EB9D3A">DEVELOP</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #E6563B;">DESIGN</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #7CB06C">SUPPORT</div>
+                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #00ABA9">HOST</div>
             </div>
         </div>
     </header>
@@ -128,6 +128,34 @@
             </div>
 
         </section>
+        <aside class="side-bar">
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <h4>the admin bar and absolute positioning</h4>
+            </div>
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <h4>nibbler awesome website testing</h4>
+            </div>
+            <div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <h4>how to get google to like you</h4>
+            </div>
+            <div>
+                <h5>last tweet</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Eaque unde quidem a id animi deleniti temporibus quia perspiciatis?
+                    Quidem numquam veritatis impedit, animi dignissimos voluptatum.
+                    Aperiam praesentium quod incidunt itaque?
+                </p>
+            </div>
+        </aside>
     </main>
 </div>
 <!-- JavaScript Bundle with Popper -->
