final development of codeup design using bootstrap and custom css done

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -21,12 +21,14 @@
     <nav class="navbar navbar-expand-lg mb-5" style="font-family: 'Abel', sans-serif;">
         <div class="container-fluid">
             <img class="me-2" src="img/logo.png" height="60" width="60"/>
-            <a class="navbar-brand d-md-none d-lg-block " href="#">codeup design</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="#">codeup design</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link disabled text-uppercase" aria-current="page" href="#">services</a>
                     </li>
@@ -47,7 +49,7 @@
     <!-- the main header section begins here -->
     <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 header-menu mb-4 d-flex text-center text-uppercase">visual design & web development</div>
+            <div class="col-sm-12 hero-text mb-4 d-flex text-center text-uppercase">visual design & web development</div>
             <div class="col-sm-12 sub-heading mb-5 text-center text-uppercase">from park city, utah</div>
         </div>
         <div class="container mt-5">
@@ -66,10 +68,10 @@
     <!-- the middle sub-heading begin here -->
     <section class="container d-flex flex-row text-center align-items-center my-4">
         <div class="d-flex flex-row justify-content-center col-8 div-center">
-            <h5 class=" text-uppercase text-center text-muted">Selected Work</h5>
+            <h5 class=" text-uppercase text-center text-muted" style="font-size: 1rem;">Selected Work</h5>
         </div>
         <div class="d-flex flex-row col-4 justify-content-center d-none d-lg-block">
-            <h5 class="text-uppercase text-muted">the last</h5>
+            <h5 class="text-uppercase text-muted" style="font-size: 1rem;">the last</h5>
         </div>
     </section>
 
@@ -157,8 +159,8 @@
                 </div>
                 <h4 class="ps-4" style="font-family: 'Anton', sans-serif;">how to get google to like you</h4>
             </div>
-            <div class="">
-                <h5>last tweet</h5>
+            <div class="mt-5">
+                <h5 class="text-uppercase text-muted" style="font-size: 0.9rem">last tweet</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Eaque unde quidem a id animi deleniti temporibus quia perspiciatis?
                     Quidem numquam veritatis impedit, animi dignissimos voluptatum.
