final development of codeup design using bootstrap and custom css done

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -48,16 +48,16 @@
     </nav>
     <!-- the main header section begins here -->
     <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
-        <div class="row d-flex justify-content-center">
-            <div class="col-sm-12 hero-text mb-4 d-flex text-center text-uppercase">visual design & web development</div>
-            <div class="col-sm-12 sub-heading mb-5 text-center text-uppercase">from park city, utah</div>
+        <div class="row">
+            <div class="hero-text mb-4 d-flex text-center text-uppercase">visual design & web development</div>
+            <div class="sub-heading mb-5 text-center text-uppercase">from park city, utah</div>
         </div>
         <div class="container mt-5">
             <div class="row d-flex flex-row justify-content-center">
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #EB9D3A">DEVELOP</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #E6563B;">DESIGN</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #7CB06C">SUPPORT</div>
-                <div class="col-sm-6 me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #00ABA9">HOST</div>
+                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #EB9D3A">DEVELOP</div>
+                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #E6563B;">DESIGN</div>
+                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #7CB06C">SUPPORT</div>
+                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #00ABA9">HOST</div>
             </div>
         </div>
     </header>
@@ -141,7 +141,7 @@
         </section>
         <!-- side bar begins here -->
         <aside class="side-bar ms-5 hidden">
-            <div class="d-flex flex-row">
+            <div class="d-flex flex-row mb-4">
                 <div>
                     <img src="img/mobile-phone.jpg" alt="a cell phone at the top of a computer keyboard">
                 </div>
